fix overflow scroll

--- a/css/devconsole.css.sass
+++ b/css/devconsole.css.sass
@@ -97,7 +97,7 @@ html,body
     /*-webkit-overflow-scrolling: touch*/
 
   .pn-panel:hover 
-    overflow-y: scroll
+    overflow-y: auto
     
   .panel-content
     padding: 0
